Create 3D rooms from 2D walls and wall's components drawings
Refactor Canvas to common folder

Create interior arranger component from common canvas

Keeping objects and floor plan state

Add react bootstrap

Add file and edit top menu buttons

Separate top and bottom menus

Add file load handling

Add scene clearing on file load

Add ShapePropsCreator class

Create Shape from wallFace points

Create WallFaceMesh from Shape points

Fix aligning 2d and 3d renders

Fix inverted z axis

Add elevation for wall component holes

Fix bug with wrong component holes at edges of walls

Update TODOS

Add textures handling for walls

Fix texture wrong rotation for wall side

Add wall top and bottom covers

Add window component frames

--- a/src/app/css/MainStyle.css
+++ b/src/app/css/MainStyle.css
@@ -1,14 +1,16 @@
-.MainView { 
+.app-main-view {
   display: flex;
   flex-flow: column;
-  height: 100vh;
 }
-.Menu {
+.app-top-menu {
   height: 100%;
+}
+.app-bottom-menu {
+  height: 22vh;
   background-color: grey;
 }
-.Render { 
-  height: 70vh;
+.app-canvas {
+  height: 75vh;
   background-color: #DDDDDD;
-  flex-grow : 1; 
+  flex-grow: 1;
 }
