Doesn't properly dismount appearanceEditController

--- a/src/app/css/SideBySide.css
+++ b/src/app/css/SideBySide.css
@@ -4,5 +4,10 @@
 
 .side-by-side-child {
     flex: 1;
+    width: 99.6%;
     margin: .05rem .05rem;
+}
+
+.side-by-side-child-only-flex {
+    flex: 1;
 }
