Feature/20 arranger add possibility to change color and textures (#21)
* Add selecting wall faces to edit

* Highlight selected wall faces

* Add color picker

* Fix component unmounting bug

* Add better lighting

* Add promise-based texture loading

* Texture images not loading on list

* Add button to select loaded textures

* Keep rotation state in a component stored between views

* Pass texture rotation by reference

* Fix floors and ceilings being lighted differently

* Reuse single component for all objects

--- a/src/app/css/SideBySide.css
+++ b/src/app/css/SideBySide.css
@@ -1,8 +1,14 @@
 .side-by-side-parent {
     display: flex;
+    width: 100%;
 }
 
 .side-by-side-child {
     flex: 1;
+    width: 99.6%;
     margin: .05rem .05rem;
+}
+
+.side-by-side-child-only-flex {
+    flex: 1;
 }
